Mon 20 Jul 11:32:04 GMT 2003 Jim Segrave <jes@jes-2.nl.demon.net>

	* rollout.c - re-instate fix for initial position dice (lost 
	  when hand merging changes for orginal extendable rollouts)

Mon 20 Jul 09:49:08 GMT 2003 Jim Segrave <jes@jes-2.nl.demon.net>

	* progress.c - neater display of rank/jsds, better column label
	
Sun 19 Jul 22:01:18 GMT 2003 Jim Segrave <jes@jes-2.nl.demon.net>

	* rollout.c - called SanityCheck with reversed board, so
	  it didn't deal with rollouts where one side has borne 
	  off.
	
Sun 19 Jul 14:49:33 GMT 2003 Jim Segrave <jes@jes-2.nl.demon.net>

	* gtkgame.c - fix limits on j.s.d. spinner, re-arrange
	  rollout general page (truncation pane above later
	  evaluations pane).
	
Sun 19 Jul 10:48:16 GMT 2003 Jim Segrave <jes@jes-2.nl.demon.net>

	* rollout.c was losing the number of games rolled out.
	
Sat Jul 18 09:55:40 GMT 2003 Jim Segrave <jes@jes-2.nl.demon.net>

	* guile.c - adjust call to GeneralEvaluationR to match
	  new rollout progress functions.
	
Sat Jul 18 07:13:40 GMT 2003 Jim Segrave <jes@jes-2.nl.demon.net>

	* gtkgame.c - search the stack of grab owners for the
	  current caller of ResumeInput and trim the stack if 
	  found
	
Sat Jul 18 00:22:40 GMT 2003 Jim Segrave <jes@jes-2.nl.demon.net>

	* rollout.c gtkgame.c - update after every game rolled out,
	  cosmetics on Rank/no. JSDs
	
Fri Jul 18 23:02:40 GMT 2003 Jim Segrave <jes@jes-2.nl.demon.net>

	* gtkgame.c - add a stack to hold signals for grab so that
	  closing a window with grab will not die when the signal
	  can't be disconnected
	
Fri Jul 18 21:15:10 GMT 2003 Jim Segrave <jes@jes-2.nl.demon.net>

	* gnubg.c - missing call to RolloutProgressStart in CommandRollout
	  for chequer play
	
Fri Jul 18 21:32:34 2003  Holger Bochnig <hbgg@gmx.net>

	* gtkgame.c gtkoptions.c: fix [bug #4288] Incorrect path to MET

Fri Jul 18 13:49:30 GMT 2003 Jim Segrave <jes@jes-2.nl.demon.net>

	* backgammon.h eval.h gnubg.c rollout.c rollout.h progress.c